added ability to read sec text files

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -107,7 +107,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_to_list(categ):\n",
+    "    text_corpus = []\n",
+    "    for cat in categ:\n",
+    "        with open(\"SEC_TSLA_\"+cat+\".txt\") as file:\n",
+    "            text_corpus.append(file.read().replace('\\n',' '))\n",
+    "    \n",
+    "    return text_corpus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read_to_list(categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk_list = [n for n in get_chunks(section_text2, 1600)]\n",
+    "chunk_list = [n for n in get_chunks(read_to_list(categories)[0], 1600)]\n",
     "message_construct = [{\"role\":\"user\", \"content\": \"Summarize the following text for me mention the company name and the specifics.\"},\n",
     "                     {\"role\":\"user\", \"content\": \"To provide the context for the above prompt, I will send you text in parts. When I am finished, I will tell you 'ALL PARTS SENT'. Do not answer until you have received all the parts. \"}]\n",
     "\n",
@@ -141,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "19"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The text provided discusses cybersecurity risk management and strategy at a company. The company, whose name is not specified, recognizes the importance of identifying and managing material risks associated with cybersecurity threats and has multi-faceted approaches to address these risks. They conduct proactive reviews, penetration testing, bug bounty programs, and employee training. The company has also implemented incident response and breach management processes overseen by various teams. Additionally, they assess third-party risks, engage external auditors, and have their Information Security Management System certified to conform to ISO/IEC 27001:2013 requirements. The company's Board and Audit Committee are actively involved in overseeing cybersecurity risks, and leaders from various teams with prior experience in IT and security manage cybersecurity risk management and strategy processes.\n"
+      "Tesla is a company that designs, manufactures, and sells electric vehicles, energy generation and storage systems. They have two primary segments: automotive, which focuses on vehicles like Model 3, Y, S, X, Cybertruck, and solar products like Powerwall and Megapack; and energy generation and storage, offering solar energy products like Solar Roof. The company also develops self-driving technology for vehicles and has extensive expertise in battery and powertrain engineering. Tesla operates globally and offers financial services like purchase financing and leases, as well as insurance products. In terms of regulations, they comply with vehicle safety, battery safety, self-driving vehicles, and manufacturer and dealer regulations. Tesla also emphasizes Environmental, Social, and Governance (ESG) initiatives and human capital resources, focusing on sustainable operations, employee welfare, and continuous development through various educational programs and apprenticeships. The company's strong emphasis on intellectual property protection and competitive markets for both automotive and energy storage systems are highlighted. Available information about Tesla can be found on the SEC's website, Tesla's website, and its investor relations site.\n"
      ]
     }
    ],
