removed redunant cells

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -149,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk_list = [n for n in get_chunks(read_to_list(categories)[0], 1600)]\n",
+    "chunk_list = [n for n in get_chunks(read_to_list(categories)[3], 1600)]\n",
     "message_construct = [{\"role\":\"user\", \"content\": \"Summarize the following text for me mention the company name and the specifics.\"},\n",
     "                     {\"role\":\"user\", \"content\": \"To provide the context for the above prompt, I will send you text in parts. When I am finished, I will tell you 'ALL PARTS SENT'. Do not answer until you have received all the parts. \"}]\n",
     "\n",
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19"
+       "5"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,14 +197,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tesla is a company that designs, manufactures, and sells electric vehicles, energy generation and storage systems. They have two primary segments: automotive, which focuses on vehicles like Model 3, Y, S, X, Cybertruck, and solar products like Powerwall and Megapack; and energy generation and storage, offering solar energy products like Solar Roof. The company also develops self-driving technology for vehicles and has extensive expertise in battery and powertrain engineering. Tesla operates globally and offers financial services like purchase financing and leases, as well as insurance products. In terms of regulations, they comply with vehicle safety, battery safety, self-driving vehicles, and manufacturer and dealer regulations. Tesla also emphasizes Environmental, Social, and Governance (ESG) initiatives and human capital resources, focusing on sustainable operations, employee welfare, and continuous development through various educational programs and apprenticeships. The company's strong emphasis on intellectual property protection and competitive markets for both automotive and energy storage systems are highlighted. Available information about Tesla can be found on the SEC's website, Tesla's website, and its investor relations site.\n"
+      "The company is headquartered in Austin, Texas and has properties in North America, Europe, and Asia for various purposes such as manufacturing, assembly, warehousing, retail, and administrative offices. They generally lease their facilities, with some exceptions for manufacturing facilities. The primary owned and leased manufacturing facilities include Gigafactory locations in Texas, California, Nevada, Germany, and China, as well as a Megafactory in California.\n"
      ]
     }
    ],
@@ -1050,53 +1050,6 @@
     "    if current_line:\n",
     "        lines.append(current_line.strip())\n",
     "    print('\\n'.join(lines))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def send(prompt=None, text_data=None, chat_model='\"gpt-3.5-turbo', model_token_limit=8192, max_tokens=2500):\n",
-    "#     if not prompt:\n",
-    "#         return \"Error: Prompt is missing\"\n",
-    "#     if not text_data:\n",
-    "#         return \"Error Text data is missing\"\n",
-    "    \n",
-    "#     tokenizer = tiktoken.encoding_for_model(chat_model)\n",
-    "#     token_int =  tokenizer.encode(text_data)\n",
-    "\n",
-    "#     chunk_size = max_tokens - len(tokenizer.encode(prompt))\n",
-    "#     chunks = [token_int[i: i+ chunk_size] for i in range(0, len(token_int), chunk_size)]\n",
-    "\n",
-    "#     #Decode back into string\n",
-    "#     chunks = [tokenizer.decode(chunk) for chunk in chunks]\n",
-    "\n",
-    "#     responses = []\n",
-    "#     messages = [\n",
-    "#         {\"role\":\"user\", \"content\": prompt},\n",
-    "#         {\n",
-    "#             \"role\":\"user\",\n",
-    "#             \"content\": \"To provide the context for the above prompt, I will send you text in parts. When I am finished, I will tell you 'ALL PARTS SENT'. Do not answer until you have received all the parts. \"\n",
-    "#         }\n",
-    "#     ]\n",
-    "\n",
-    "#     for chunk in chunks:\n",
-    "#         messages.append({\"role\":\"user\", \"content\": chunk})\n",
-    "#         #Check if total tokens exceed the model's limit and remove oldest chunk if necessary\n",
-    "#         while (sum(len(tokenizer.encode(msg[\"content\"]))for msg in messages) > model_token_limit):\n",
-    "#             messages.pop(1) #remove oldest chunk\n",
-    "        \n",
-    "#         response = openai.ChatCompletion.create(model=chat_model, messages=messages)\n",
-    "#         chatgpt_response = response.choice[0].message[\"content\"].strip()\n",
-    "#         responses.append(chatgpt_response)\n",
-    "    \n",
-    "#     messages.append({\"role\": \"user\", \"content\": \"ALL PARTS SENT\"})\n",
-    "#     resposnse = openai.ChatCompletion.create(model=chat_model, messages=messages)\n",
-    "#     final_response = response.choices[0].message[\"content\"].strip()\n",
-    "#     responses.append(final_response)\n",
-    "#     return responses\n"
    ]
   },
   {
