working on summarizing historical data

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -1361,6 +1361,78 @@
    "source": [
     "#send(prompt = \"Summarize the following text for me\", text_data=section_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def read_html(file_path:str):\n",
+    "#     try:\n",
+    "#         html_file = open(file_path, \"r\")\n",
+    "#         index = html_file.read()\n",
+    "#         s = BeautifulSoup(index, 'lxml')\n",
+    "#         return s.get_text(separator=' ', strip='\\n')\n",
+    "#     except FileNotFoundError:\n",
+    "#         print(\"File path not found\")\n",
+    "\n",
+    "# def to_search(match_elem):\n",
+    "#     list_match = match_elem.split(\" \")\n",
+    "#     list_match[0] = list_match[0].capitalize()\n",
+    "#     return ' '.join(list_match)\n",
+    "\n",
+    "# def get_section(section:str, filing_text):\n",
+    "#     # Remove these characters and replace them with empty string\n",
+    "#     filing_text = re.sub('\\xa0','', filing_text)\n",
+    "#     filing_text = re.sub('\\n', '',filing_text)\n",
+    "#     filing_text = re.sub('\\t','', filing_text)\n",
+    "#     #print(\"file test\",filing_text[0:1000])\n",
+    "#     if section[-1] != '.':\n",
+    "#         section+='.'\n",
+    "#     #Match all the ITEM elements in document\n",
+    "#     matches = list(re.finditer(re.compile('(Item|ITEM)\\s?\\d{0,2}[A-Z]?\\.'),filing_text))\n",
+    "#     section_list = [m[0] for m in matches]\n",
+    "#     #print(len(section_list), section_list)\n",
+    "#     #print(type(matches))\n",
+    "#     for i in range(len(matches)):\n",
+    "#         print(matches[i][0])\n",
+    "#     assert section in section_list, f\"The section should be in the list {section_list}\"\n",
+    "#     item_matches = [i for i in range(len(matches)) if matches[i][0] == section]\n",
+    "#     #print(\"Item matches: \", item_matches)\n",
+    "\n",
+    "#     section_name = ''\n",
+    "#     if len(item_matches) >= 1:\n",
+    "#         section_name_start = min(item_matches)\n",
+    "#         section_name_end = section_name_start+1\n",
+    "#         start = matches[section_name_start].span()[1]\n",
+    "#         end = matches[section_name_end].span()[0]\n",
+    "\n",
+    "#         section_name = filing_text[start:end]\n",
+    "#         section_name = re.sub('\\d', '', section_name)\n",
+    "    \n",
+    "#     start = max(item_matches)\n",
+    "#     end = start+1\n",
+    "#     start = matches[start].span()[1]\n",
+    "#     end = matches[end].span()[0]+10000\n",
+    "#     #print(start, end)\n",
+    "\n",
+    "#     section_text = filing_text[start:end]\n",
+    "#     section_text = re.sub(section_name, '', section_text, count=1)\n",
+    "#     section_text = re.sub(section_name.upper(), '', section_text, count=1)\n",
+    "#     return section_text, section_name.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def download():\n",
+    "#     dl = Downloader(\"SCS\",email_address=\"ayodejiodetola@gmail.com\")\n",
+    "#     dl.get(\"10-K\", \"TSLA\", include_amends=True)"
+   ]
   }
  ],
  "metadata": {
