cleaning up code

--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -10,7 +10,7 @@
     "import json\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from IPython.display import display, HTML\n",
+    "#from IPython.display import display, HTML\n",
     "from openai import OpenAI\n",
     "import tiktoken \n",
     "queryAPI = QueryApi(api_key='041c38e656c459b1b336a7bea7d83c057482f669d2e663a1b6fa8864b2071550')\n",
