--- a/SEC_DATA.ipynb
+++ b/SEC_DATA.ipynb
@@ -10,7 +10,7 @@
     "import json\n",
     "import requests\n",
     "import pandas as pd\n",
-    "#from IPython.display import display, HTML\n",
+    "from IPython.display import display, HTML\n",
     "from openai import OpenAI\n",
     "import tiktoken \n",
     "queryAPI = QueryApi(api_key='041c38e656c459b1b336a7bea7d83c057482f669d2e663a1b6fa8864b2071550')\n",
@@ -1433,6 +1433,69 @@
     "#     dl = Downloader(\"SCS\",email_address=\"ayodejiodetola@gmail.com\")\n",
     "#     dl.get(\"10-K\", \"TSLA\", include_amends=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SEC_TSLA_0/SEC_TSLA1A.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "ticker = \"TSLA\"\n",
+    "cat = \"1A\"\n",
+    "index = 0\n",
+    "print(\"SEC_\"+ticker+\"_\"+str(index)+\"/SEC_\"+ticker+cat+\".txt\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#def preprocess_data(section_text):\n",
+    "#     word_tokens = word_tokenize(section_text)\n",
+    "#     sentence = []\n",
+    "\n",
+    "#     for word in word_tokens:\n",
+    "#         sentence.append(word)\n",
+    "    \n",
+    "#     lemmatizer  = WordNetLemmatizer()\n",
+    "#     sentence = [lemmatizer.lemmatize(plural) for plural in sentence]\n",
+    "#     return sentence\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
